# endemism-inertia

./: .gitignore  NOTES_current_status.md  NOTES_existing_pipeline_mapping.md  README.md  pyproject.toml
scripts/: build_spatial_extraction_targets_from_woc.py  build_task1_from_stage3_outputs.py  build_task2_projection_exports_from_stage3.py  build_task3_realized_exports_from_stage3.py  export_task2_lucian_format_continent_filtered.py  export_task2_lucian_format_from_woc_projections.py  run_task1_qc.py  run_task2_projection_exports.py  run_task2_woc_spatial_projections.py  run_task3_realized_exports.py
src/crayfish_inertia/: __init__.py  __main__.py  cli.py  cohort.py  config.py  io.py  tasks.py
tests/: test_cohort.py  test_io.py
