[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crayfish-endemism-inertia"
version = "0.1.0"
description = "Export workflow for narrow-endemic freshwater crayfish SDM inertia paper."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Kristian Miok"}
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4"
]

[project.scripts]
crayfish-inertia = "crayfish_inertia.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
